--- a/base/exporters/googlecloud/agent_gateway.yaml
+++ b/base/exporters/googlecloud/agent_gateway.yaml
@@ -27,41 +27,23 @@ spec:
   mode: deployment
   config: |
     receivers:
-      prometheus/collector:
-        config:
-          scrape_configs:
-            - job_name: 'observiq-otel-collector'
-              scrape_interval: 60s
-              static_configs:
-                - targets: ['127.0.0.1:8888']
       otlp:
         protocols:
           grpc:
             endpoint: 0.0.0.0:4317
 
     processors:
-      # Resource attributes will be used to map the metrics
-      # to Google Monitored Resource type 'k8s_node'
-      # https://cloud.google.com/logging/docs/api/v2/resource-list#resource-types
-      resource/collector:
-        attributes:
-        - key: k8s.namespace.name
-          value: "${K8S_NAMESPACE}"
-          action: insert
-        - key: k8s.pod.name
-          value: "${K8S_POD_NAME}"
-          action: insert
-        - key: k8s.node.name
-          value: "${K8S_NODE_NAME}"
-          action: insert
+      # If running within GKE or EKS, try to detect the
+      # cloud provider, region, availability zone, cluster name.
+      resourcedetection:
+        detectors: [gke, eks]
+        timeout: 2s
+        override: true
 
       # Google requires k8s.cluster.name, cloud.region, cloud.availability_zone and
       # cloud.platform in order to map to container, pod, node, and cluster resource types.
       resource/all:
         attributes:
-        - key: k8s.cluster.name
-          value: poc
-          action: insert
         - key: cloud.region
           value: us-east1
           action: insert
@@ -99,24 +81,13 @@ spec:
       extensions:
         - health_check
       pipelines:
-        # Pipeline for collectors own metrics
-        #
-        # TODO(jsirianni): Does not work with gcp, gives duplicate label key error.
-        # metrics/collector:
-        #   #receivers:
-        #   #  - prometheus/collector
-        #   processors:
-        #     - resource/collector
-        #     - resource/all
-        #   exporters:
-        #     - logging
-        #     - googlecloud
         # Pipeline for ingested metrics
         #
         metrics/ingest:
           receivers:
             - otlp
           processors:
+            - resourcedetection
             - resource/all
             - batch/metrics
           exporters:
@@ -128,6 +99,8 @@ spec:
           receivers:
             - otlp
           processors:
+            - resourcedetection
+            - resource/all
             - batch/logs
           exporters:
             - logging
@@ -149,16 +122,3 @@ spec:
   env:
     - name: GOOGLE_APPLICATION_CREDENTIALS
       value: /otel/credentials.json
-    - name: K8S_NODE_NAME
-      valueFrom:
-        fieldRef:
-          fieldPath: spec.nodeName
-    - name: K8S_NAMESPACE
-      valueFrom:
-        fieldRef:
-          fieldPath: metadata.namespace
-    - name: K8S_POD_NAME
-      valueFrom:
-        fieldRef:
-          fieldPath: metadata.name
-
