--- a/base/agent_node.yaml
+++ b/base/agent_node.yaml
@@ -19,12 +19,58 @@ spec:
           - /var/log/containers/observiq-otel-collector-gateway-collector*
         poll_interval: 500ms
         operators:
+          # Support docker and containerd runtimes, which have different
+          # logging formats.
+          - type: router
+            routes:
+              - expr: 'body matches "^[^\\s]+ \\w+ .*"'
+                output: containerd_parser
+            default: docker_parser
+
           # The raw message looks like this:
           # {"log":"I0618 14:30:29.641678       1 logs.go:59] http: TLS handshake error from 192.168.49.2:56222: EOF\n","stream":"stderr","time":"2022-06-18T14:30:29.641732743Z"}
-          # So we move the actual message field to body as a string instead of preserving the json string on body and duplicating the message.
-          # at attributes.log
           - type: json_parser
+            id: docker_parser
+            timestamp:
+              parse_from: attributes.time
+              layout: '%Y-%m-%dT%H:%M:%S.%sZ'
+            output: log-to-body
+
+          # The raw message looks like this:
+          # 2022-06-18T16:52:59.639114537Z stdout F {"message":"registered Stackdriver tracing","severity":"info","timestamp":"2022-06-18T16:52:59.639034532Z"}
+          - id: containerd_parser
+            type: regex_parser
+            regex: '^(?P<time>[^\s]+) (?P<stream>\w+) (?P<partial>\w) (?P<log>.*)'
+          - type: recombine
+            source_identifier: attributes["log.file.name"]
+            combine_field: attributes.log
+            is_last_entry: "attributes.partial == 'F'"
+          - type: remove
+            field: attributes.partial
+          - id: time_parser_router
+            type: router
+            routes:
+              # Containerd can have a couple timestamp formats depending if the node has local time set
+              - output: local_containerd_timestamp_parser
+                expr: 'attributes.time != nil and attributes.time matches "^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\\.\\d{3,9}[\\+-]\\d{2}:\\d{2}"'
+              - output: utc_containerd_timestamp_parser
+                expr: 'attributes.time != nil and attributes.time matches "^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\\.\\d{3,9}Z"'
+          - type: time_parser
+            id: local_containerd_timestamp_parser
+            parse_from: attributes.time
+            layout: '%Y-%m-%dT%H:%M:%S.%s%j'
+            output: log-to-body
+          - type: time_parser
+            id: utc_containerd_timestamp_parser
+            parse_from: attributes.time
+            layout: '%Y-%m-%dT%H:%M:%S.%sZ'
+            output: log-to-body
+
+          # The raw body does not contain anything useful considering timestamp has been promotoed to
+          # the log entries timestamp, therefore we move attributes.log (the actual container log message)
+          # to body.
           - type: move
+            id: log-to-body
             from: attributes.log
             to: body
 
@@ -63,6 +109,13 @@ spec:
           value: "${K8S_CLUSTER}"
           action: upsert
 
+      k8sattributes:
+        pod_association:
+        - from: resource_attribute
+          name: k8s.pod.uid
+        filter:
+            node_from_env_var: ${K8S_NODE_NAME}
+
       batch:
         send_batch_max_size: 1000
         send_batch_size: 1000
@@ -87,6 +140,7 @@ spec:
             - kubeletstats
           processors:
             - resource
+            - k8sattributes
             - batch
           exporters:
             - otlp
@@ -95,6 +149,7 @@ spec:
             - filelog
           processors:
             - resource
+            - k8sattributes
             - batch
           exporters:
             - otlp
