--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,12 @@ on:
 jobs:
   validation:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        environment:
+          - googlecloud
+          - newrelic
+          - otlp
     steps:
       - uses: actions/checkout@v2
 
@@ -19,13 +25,8 @@ jobs:
           tar xf kubeval-linux-amd64.tar.gz
           sudo cp kubeval /usr/local/bin
 
-      - name: Render
-        run: |
-          kustomize build environments/googlecloud > googlecloud.yaml
-          kustomize build environments/newrelic > newrelic.yaml
+      - name: Render Manifest
+        run: kustomize build environments/${{ matrix.environment }} > ${{ matrix.environment }}.yaml
 
-      - name: Validate GCP
-        run: kubeval googlecloud.yaml --ignore-missing-schemas
-
-      - name: Validate New Relic
-        run: kubeval newrelic.yaml --ignore-missing-schemas
+      - name: Validate Manifest
+        run: kubeval ${{ matrix.environment }}.yaml --ignore-missing-schemas
