--- a/environments/otlp/kustomization.yaml
+++ b/environments/otlp/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
 - ../../base
-- ../../base/exporters/newrelic
+- ../../base/exporters/otlp
 patchesStrategicMerge:
 - agent_gateway.yaml
 - agent.yaml
