--- a/base/exporters/googlecloud/agent_gateway.yaml
+++ b/base/exporters/googlecloud/agent_gateway.yaml
@@ -1,3 +1,4 @@
+# yamllint disable rule:line-length
 ---
 apiVersion: v1
 kind: Service
@@ -8,9 +9,9 @@ metadata:
     app: observiq-gateway
 spec:
   ports:
-  - port: 4317
-    protocol: TCP
-    targetPort: 4317
+    - port: 4317
+      protocol: TCP
+      targetPort: 4317
   selector:
     app: observiq-gateway
   sessionAffinity: None
@@ -63,7 +64,7 @@ spec:
         send_batch_max_size: 200
         send_batch_size: 200
         timeout: 5s
-    
+
     exporters:
       googlecloud:
         metric:
