--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,4 +58,4 @@ jobs:
         run: pip install -U yamllint~=1.26.1
 
       - name: run yamllint
-        run: yamllint .
+        run: yamllint . --no-warnings --strict
