Inject node name instead of using host network. Add pod.name mapping to k8s metadata lookup

--- a/base/agent_node.yaml
+++ b/base/agent_node.yaml
@@ -154,7 +154,7 @@ spec:
         - from: resource_attribute
           name: k8s.pod.name
         filter:
-            node_from_env_var: KUBE_NODE_NAME
+            node_from_env_var: ${KUBE_NODE_NAME}
 
       resource:
         attributes:
