--- a/base/agent_node.yaml
+++ b/base/agent_node.yaml
@@ -7,6 +7,7 @@ metadata:
   namespace: default
 spec:
   mode: daemonset
+  hostNetwork: true
   config: |
     receivers:
       journald/kubelet:
@@ -201,7 +202,7 @@ spec:
           exporters:
             - otlp
 
-  image: observiq/observiq-otel-collector:1.3.0
+  image: observiq/observiq-otel-collector:1.4.0
   serviceAccount: observiq-otel-collector
   resources:
     requests:
@@ -225,13 +226,5 @@ spec:
     - mountPath: /var/lib/observiq/otelcol/node
       name: storage
       readOnly: false
-  env:
-    - name: K8S_CLUSTER
-      value: "cluster"
-    - name: KUBE_NODE_NAME
-      valueFrom:
-        fieldRef:
-          apiVersion: v1
-          fieldPath: spec.nodeName
   podSecurityContext:
     runAsUser: 0
